--- a/api_call_test/style.css
+++ b/api_call_test/style.css
@@ -108,7 +108,12 @@ h4 {
 }
 
 .incorrect {
-  background-color: #DDA448;
+  background-color: rgba(221, 164, 72, 0.85);
+  color: rgb(237, 58, 58);
+}
+
+.onIt {
+  background: rgba(252, 252, 252, 0.4)
 }
 
 span {
