--- a/api_call_test/style.css
+++ b/api_call_test/style.css
@@ -88,10 +88,21 @@ h3 {
   margin-right: 180px;
 }
 
-#startcontainer {
+#nextup {
   display: flex;
   align-content: center;
   justify-content: center;
+  /* border: 2px solid red; */
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+
+#nextup2 {
+  display: flex;
+  flex-direction: row;
+  font-size: 20px;
+  font-style: italic;
+  visibility: hidden;
 }
 
 button {
@@ -121,8 +132,14 @@ button:hover {
   /* align-content: space-around; */
   font-size: 70px;
   height: 368px;
+  /* border: 2px solid red; */
+  flex-direction: column;
 }
 
+#word2 {
+  display:flex; 
+  flex-direction: row;
+}
 h4 {
   margin-top: 120px;
   /* margin-right: 0.5px; */
